CUDA C++ Optimal/results/compilation_logs/compile_size_42_reg_32_20252112_2019.txt
========== COMPILATION START ========== 
Parameters: PARAMETR_SIZE=42, MAXREGCOUNT=32 
Compile command: nvcc -O3 -arch=sm_70 -std=c++17 -o aco_cuda_const_while.exe aco_cuda_global_while.cu -Xcompiler "/O2 /fp:fast /openmp /MT" -use_fast_math -lcudart -maxrregcount=32 -Xptxas "-O3,-v" --resource-usage 
 
aco_cuda_global_while.cu(290): warning #68-D: integer conversion resulted in a change of sign
          hashTable[i].key = -1;
                             ^

Remark: The warnings can be suppressed with "-diag-suppress <warning-number>"

aco_cuda_global_while.cu(1853): error: too few arguments in function call
          antColonyOptimizationAndDeposit << <ant_blocks, threads_per_block, 0, compute_stream >> > (dev_parametr_value, dev_norm_matrix, dev_hashTable, dev_max, dev_min, dev_hash_fail, dev_pheromon, dev_kol_enter);
                                                                                                                                                                                                                     ^

1 error detected in the compilation of "aco_cuda_global_while.cu".
aco_cuda_global_while.cu
========== COMPILATION END ========== 
Exit code: 2 
